--- a/index.html
+++ b/index.html
@@ -6,11 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orko's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1>Dipak Arya's World</h1>
+    <section>
+        <div class="half-width">
+            <h1>
+                Welcome To
+            </h1>
+            <h1>
+                <span class="orange">Dipak Arya's</span> World
+            </h1>
+            <h3>
+                Very Honest and Simple Human Being
+            </h3>
+            <p>
+                I took my high-school degree from my local town college. Then I went to Dhaka to take part in Dhaka
+                University
+                admission.By the grace of Ishwar I got admitted in DU. After completing my graduation and post
+                graduation
+                from
+                the department of Sociology I have joined Janata Bank Ltd. in 2018. As a banker my career if of two
+                years an
+                six
+                months. From this stage of life I took a discision of becoming a softwere developer.Now I am learning
+                web
+                development from Programming Hero. Hope oneday I will become a great Web Developer.
+            </p>
+            <button>
+                HIRE ME!
+            </button>
+        </div>
+        <div class="halh-width">
+            <img src="images/my-first-bg.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
