--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
                 web
                 development from Programming Hero. Hope oneday I will become a great Web Developer.
             </p>
-            <button>
-                HIRE ME!
-            </button>
+            <a class="link-button" href="http://www.facebook.com/dipakorko/" target="_blank" rel="noopener noreferrer">
+                HIRE ME!</a>
         </div>
         <div class="halh-width">
             <img src="images/my-first-bg.png" alt="">
