--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
         <div class="half-width">
             <img src="images/my-bg3.png" alt="">
         </div>
-        <div>
+        <div class="half-width">
             <h1>Dream Big</h1>
             <h2>Becoming A Web Developer</h2>
             <p>Human lives on dream. Such I have a dream one day I will be a Web Developer. Though it is very tough for
                 a working person but I will make it happen. I hope I will be one of the best Developers in my country. I
                 also hope that I will do job as a developer in a very big corporation.And I will do my developing with
                 patience and love. My corporation will fell proud of me.</p>
-            <a class="link-button" href="youtube.com/watch?v=m050iy5_2ng" target="_blank"
+            <a class="link-button" href="https://www.youtube.com/watch?v=bheHjqvkaaI" target="_blank"
                 rel="noopener noreferrer">Dream
-                Persionality</a>
+                Personality</a>
         </div>
     </section>
 </body>
