--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
                 Personality</a>
         </div>
     </section>
+    <section class="experiences">
+        <div>
+            <h1>Experiences</h1>
+        </div>
+        <div class="end-part">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2022-2024,Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half-width">
+                <h1>Junior Developer</h1>
+                <h3>2021-2022,Programming Hero Learner</h3>
+                They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it
+                to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
