--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h1>Experiences</h1>
         </div>
         <div class="end-part">
-            <div class="half-width">
+            <div class="ful-stack">
                 <h1>Full Stack Developer</h1>
                 <h3>2022-2024,Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -73,7 +73,7 @@
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half-width">
+            <div class="junior">
                 <h1>Junior Developer</h1>
                 <h3>2021-2022,Programming Hero Learner</h3>
                 They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
