--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
         </div>
     </section>
+    <footer>© Dipak 2022, a Programming Hero initiative</footer>
 </body>
 
 </html>
